hphp/hack/test/typecheck/records/record_init_nonexistent.php
<?hh

const int FOO = 1;

record A {
  int x = FOO;
  int y = NO_SUCH_CONST;
}
